[S54a] bomDrop() API: iDempiere BOM Drop — IsBOM explosion into C_OrderLine tree
bomDrop(buildingProductId) creates C_Order, walks m_bom/m_bom_line recursively,
inserts C_OrderLine hierarchy (BUILDING→FLOOR→ROOM→LEAF). Only IsBOM products
(matching m_bom entry) explode; PHANTOM skipped; dangling MAKE skipped.
Returns BomTreeNode for Outliner (expand/collapse). TC-1: BUILDING_SH_STD → 55 elements.

DocAction lifecycle: Save(validate+adjust) → Approve(new product config) → Complete(compile+viewport).

6 witnesses (W-DROP-1..6). Specs updated: BIM_Designer_SRS §28, GENERATIVE_HOUSE_SRS §7/§9,
TestArchitecture traceability, ConstructionAsERP DocAction, BBC.md, SourceCodeGuide.

Also includes prior session changes: S53 roof-wall proofs (P27/P28), TRIM verb,
EYES tier 2/3 proofs, spec hardening, migration renumbering, ASI authoring tests.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>